# water_potability_prediction_project

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  dvc.yaml  params.yaml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
dvclive/: metrics.json
dvclive/plots/metrics/: accuracy.tsv  f1-score.tsv  recall.tsv
mlruns/0/: meta.yaml
mlruns/0/0633ddeeb29d47569bdd3bab349df76e/: meta.yaml
mlruns/0/0633ddeeb29d47569bdd3bab349df76e/tags/: mlflow.source.git.commit
mlruns/0/1ae724c19b63416db9ca9a7480db0eae/: meta.yaml
mlruns/0/1ae724c19b63416db9ca9a7480db0eae/tags/: mlflow.runName
mlruns/0/360b6a69a7b24f959f4951f40fb345cb/: meta.yaml
mlruns/0/360b6a69a7b24f959f4951f40fb345cb/metrics/: accuracy  f1-score  precision  recall
mlruns/0/360b6a69a7b24f959f4951f40fb345cb/tags/: mlflow.runName
mlruns/0/5e3e40b11f2049da9516675dc491e631/: meta.yaml
mlruns/404785162253721132/: meta.yaml
mlruns/404785162253721132/1757b4d8f25c459d8bde8a4f3e1bf3ca/: meta.yaml
mlruns/847371219181088471/: meta.yaml
mlruns/847371219181088471/211ce230eef84a97ab8ae96a3cb5e066/: meta.yaml
mlruns/847371219181088471/cb079b5daa97480d822ecada8e781bdc/: meta.yaml
mlruns/913646583006097373/: meta.yaml
mlruns/913646583006097373/e5e54796244a4828b67469dc76f2a667/: meta.yaml
src/water_potability_prediction_project/: __init__.py  data_collection.py  data_preprocessing.py  evaluate_model.py  model_building.py
tests/: __init__.py  test_water_potability_prediction_project.py
(+25 files in other folders)
