[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "water_potability_prediction_project"
version = "0.1.0"
description = "I am going a ml-project on water poability prediction using mlops."
readme = "README.rst"
authors = [
  {name = "Sudip Das", email = "codex.tagc@gmail.com"}
]
maintainers = [
  {name = "Sudip Das", email = "codex.tagc@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Sudip-8345/water_potability_prediction_project/issues"
changelog = "https://github.com/Sudip-8345/water_potability_prediction_project/blob/master/changelog.md"
homepage = "https://github.com/Sudip-8345/water_potability_prediction_project"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

